--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url= jdbc:postgresql://localhost:5432/telegram_bot_db
+spring.datasource.username= user_for_telegram
+spring.datasource.password= 123
+spring.jpa.hibernate.ddl-auto= validate
+spring.liquibase.change-log= db/changelog/changelog-master.xml
